Added some new CTAs

--- a/_factory_call_to_actions.html
+++ b/_factory_call_to_actions.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content=""/>
         <meta name="author" content=""/>
-        <title>Blank Template for Bootstrap</title>
+        <title>Call to Actions</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
@@ -18,13 +18,110 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-CTA-1</p>
             </div>
         </section>
+        <section class="pb-5 pd-CTA-1 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-3 pb-3 pb-lg-0">
+                        <div class="pd-CTA-1-img-col">
+                            <img src="images/design-assets/icon-email-newsletter.svg" alt="icon of a newsletter" width="70" height="70" class="mb-3"/>
+                            <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Subscribe</a>
+                        </div>                         
+                    </div>
+                    <div class="col-12 col-lg-9">
+                        <header class="pd-CTA-1-text-col">
+                            <h2><strong>Subscribe to our newsletter</strong></h2>
+                            <p>Get the latest news straight to your inbox from us...</p>
+                        </header>                         
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-CTA-2</p>
             </div>
         </section>
-        <div class="container">
-</div>
+        <section class="pb-5 pd-CTA-2 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-6 pb-3 pb-lg-0">
+                        <div class="pd-CTA-2-text-col">
+                            <header>
+                                <h2><strong>Want to work with us?</strong></h2>
+                                <div class="pd-CTA-2-headline">
+                                    <p><strong>Get started today...</strong></p>
+                                </div>
+                            </header>
+                            <div class="pd-CTA-2-subHeadline">
+                                <p>Sed ornare elementum iaculis. Pellentesque mollis molestie turpis vel rhoncus.&nbsp;</p>
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="align-items-md-start align-items-stretch col-12 col-lg-6 d-flex flex-column justify-content-center">
+                        <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Get Started</a>                          
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-CTA-3</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-CTA-3 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg pb-3 pb-lg-0">
+                        <div class="pd-CTA-3-icon-outer">
+                            <img src="images/design-assets/icon-email-newsletter.svg" alt="icon of email newsletter" width="70" height="70">
+                        </div>                                                  
+                    </div>
+                    <div class="col-12 col-lg-7 pb-3 pb-lg-0 pe-lg-3 ps-lg-3">
+                        <div class="pd-CTA-3-text-outer">
+                            <header>
+                                <h2><strong>Want to work with us?</strong></h2>
+                                <div class="pd-CTA-3-headline">
+                                    <p><strong>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</strong></p>
+                                </div>
+                            </header>
+                            <div class="pd-CTA-3-subHeadline">
+                                <p>Aenean molestie mauris ipsum, et tempor odio scelerisque sit amet.</p>
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="align-items-md-center align-items-stretch col-12 col-lg d-flex flex-column justify-content-center">
+                        <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Get Started</a> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-CTA-4</p>
+            </div>
+        </section>
+        <section class="pb-4 pb-lg-3 pd-CTA-4 pt-4 pt-lg-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-8 pb-3 pb-lg-0">
+                        <div class="pd-CTA-4-text-outer">
+                            <h2><strong>Let&apos;s get started...</strong></h2>
+                            <div class="pd-CTA-4-subHeadline">
+                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.&nbsp;</p>
+                            </div>
+                        </div>                                                  
+                    </div>
+                    <div class="align-items-md-center align-items-stretch col-12 col-lg d-flex flex-column justify-content-center">
+                        <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Get Started</a> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-CTA-5</p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
