--- a/_factory_testimonials.html
+++ b/_factory_testimonials.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <meta name="description" content=""/>
+        <meta name="author" content=""/>
         <title>Testimonials</title>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
         <section class="pb-5 pt-5" style="position: relative;">
@@ -30,10 +30,10 @@
                 <div class="row">
                     <div class="col" style="position: relative;">
                         <div class="left pd-testimonial-1-quotes">
-                            <img src="images/design-assets/icon-quote-mark-2-primary-start.svg" alt="icon of a quote mark" width="60" height="60">
+                            <img src="images/design-assets/icon-quote-mark-2-primary-start.svg" alt="icon of a quote mark" width="60" height="60"/>
                         </div>
                         <div class="pd-testimonial-1-quotes right">
-                            <img alt="icon of a quote mark" width="60" height="60" src="images/design-assets/icon-quote-mark-2-primary-end.svg">
+                            <img alt="icon of a quote mark" width="60" height="60" src="images/design-assets/icon-quote-mark-2-primary-end.svg"/>
                         </div>
                         <div class="pd-testimonial-1-mainText pe-3 pe-lg-5 ps-3 ps-lg-5">
                             <div class="pd-testimonial-1-quotation text-center">
@@ -49,8 +49,7 @@
             </article>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-1-link">Hear from more of our clients...<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-1-link">Hear from more of our clients...<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -72,10 +71,10 @@
                 <div class="row">
                     <div class="col" style="position: relative;">
                         <div class="left pd-testimonial-2-quotes">
-                            <img src="images/design-assets/icon-quote-mark-2-primary-start.svg" alt="icon of a quote mark" width="60" height="60">
+                            <img src="images/design-assets/icon-quote-mark-2-primary-start.svg" alt="icon of a quote mark" width="60" height="60"/>
                         </div>
                         <div class="pd-testimonial-2-quotes right">
-                            <img alt="icon of a quote mark" width="60" height="60" src="images/design-assets/icon-quote-mark-2-primary-end.svg">
+                            <img alt="icon of a quote mark" width="60" height="60" src="images/design-assets/icon-quote-mark-2-primary-end.svg"/>
                         </div>
                         <div class="pd-testimonial-2-mainText pe-3 pe-lg-5 ps-3 ps-lg-5">
                             <div class="pd-testimonial-2-quotation text-center">
@@ -91,8 +90,7 @@
             </article>
             <footer class="container pb-3 pt-5">
                 <div class="row">
-                    <div class="col text-center">
-                        <a href="#" name="anchor" class="btn btn-info"><span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg" class="me-2"></span>View Testimonials</a> 
+                    <div class="col text-center"><a href="#" name="anchor" class="btn btn-info"><span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg" class="me-2"/></span>View Testimonials</a> 
                     </div>
                 </div>
             </footer>
@@ -114,10 +112,10 @@
                 <div class="row">
                     <div class="col" style="position: relative;">
                         <div class="left pd-testimonial-3-quotes">
-                            <img alt="icon of a quote mark" width="80" height="80" src="images/design-assets/icon-quote-mark-2-white.svg">
+                            <img alt="icon of a quote mark" width="80" height="80" src="images/design-assets/icon-quote-mark-2-white.svg"/>
                         </div>
                         <div class="pd-testimonial-3-quotes right">
-                            <img alt="icon of a quote mark" width="80" height="80" src="images/design-assets/icon-quote-mark-2-white-end.svg">
+                            <img alt="icon of a quote mark" width="80" height="80" src="images/design-assets/icon-quote-mark-2-white-end.svg"/>
                         </div>
                         <div class="pd-testimonial-3-mainText pe-3 pe-lg-5 ps-3 ps-lg-5">
                             <div class="pd-testimonial-3-quotation text-center">
@@ -127,8 +125,8 @@
                         <footer class="pd-testimonial-3-author">
                             <div>
                                 <picture>
-                                    <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
-                                    <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="140" height="140">
+                                    <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp"/>
+                                    <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="140" height="140"/>
                                 </picture>
                             </div>
                             <div style="display: flex; flex-direction: column; justify-content: center;" class="ps-2">
@@ -141,8 +139,7 @@
             </article>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -156,7 +153,7 @@
             <div class="pd-testimonial-4-image-wrapper">
                 <picture>
                     <source srcset="/images/uploads/hero-testimonials.webp 1800w, 
-                                    /images/uploads/hero-testimonials-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
+                                    /images/uploads/hero-testimonials-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
                     <img srcset="/images/uploads/hero-testimonials.jpg 1800w,
                                 /images/uploads/hero-testimonials-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-testimonials.jpg" loading="lazy"/>
                 </picture>
@@ -173,10 +170,10 @@
                 <div class="row">
                     <div class="col" style="position: relative;">
                         <div class="left pd-testimonial-4-quotes">
-                            <img alt="icon of a quote mark" width="80" height="80" src="images/design-assets/icon-quote-mark-2-white.svg">
+                            <img alt="icon of a quote mark" width="80" height="80" src="images/design-assets/icon-quote-mark-2-white.svg"/>
                         </div>
                         <div class="pd-testimonial-4-quotes right">
-                            <img alt="icon of a quote mark" width="80" height="80" src="images/design-assets/icon-quote-mark-2-white-end.svg">
+                            <img alt="icon of a quote mark" width="80" height="80" src="images/design-assets/icon-quote-mark-2-white-end.svg"/>
                         </div>
                         <div class="pd-testimonial-4-mainText pe-3 pe-lg-5 ps-3 ps-lg-5">
                             <div class="pd-testimonial-4-quotation text-center">
@@ -186,8 +183,8 @@
                         <footer class="pd-testimonial-4-author">
                             <div>
                                 <picture>
-                                    <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
-                                    <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="140" height="140">
+                                    <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp"/>
+                                    <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="140" height="140"/>
                                 </picture>
                             </div>
                             <div style="display: flex; flex-direction: column; justify-content: center;" class="ps-2">
@@ -200,8 +197,7 @@
             </article>
             <footer class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-4-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-4-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -230,8 +226,8 @@
                         </div>
                         <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-5-author-wrapper">
                             <picture>
-                                <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
-                                <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100">
+                                <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp"/>
+                                <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100"/>
                             </picture>
                             <div class="p-2">
                                 <h3 class="mb-0">Client Name</h3>
@@ -248,8 +244,8 @@
                         </div>
                         <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-5-author-wrapper">
                             <picture>
-                                <source srcset="/images/uploads/testimonial-man.webp" type="image/webp">
-                                <img src="/images/uploads/testimonial-man.jpg" alt="image of testimonial author" width="100" height="100">
+                                <source srcset="/images/uploads/testimonial-man.webp" type="image/webp"/>
+                                <img src="/images/uploads/testimonial-man.jpg" alt="image of testimonial author" width="100" height="100"/>
                             </picture>
                             <div class="p-2">
                                 <h3 class="mb-0">Client Name</h3>
@@ -261,8 +257,7 @@
             </div>
             <footer class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-5-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-5-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -291,8 +286,8 @@
                         </div>
                         <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-6-author-wrapper">
                             <picture>
-                                <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
-                                <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100">
+                                <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp"/>
+                                <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100"/>
                             </picture>
                             <div class="p-2">
                                 <h3 class="mb-0">Client Name</h3>
@@ -309,8 +304,8 @@
                         </div>
                         <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-6-author-wrapper">
                             <picture>
-                                <source srcset="/images/uploads/testimonial-man.webp" type="image/webp">
-                                <img src="/images/uploads/testimonial-man.jpg" alt="image of testimonial author" width="100" height="100">
+                                <source srcset="/images/uploads/testimonial-man.webp" type="image/webp"/>
+                                <img src="/images/uploads/testimonial-man.jpg" alt="image of testimonial author" width="100" height="100"/>
                             </picture>
                             <div class="p-2">
                                 <h3 class="mb-0">Client Name</h3>
@@ -322,8 +317,7 @@
             </div>
             <footer class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-6-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-6-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -337,7 +331,7 @@
             <div class="pd-testimonial-7-image-wrapper">
                 <picture>
                     <source srcset="/images/uploads/hero-testimonials.webp 1800w, 
-                                    /images/uploads/hero-testimonials-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
+                                    /images/uploads/hero-testimonials-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
                     <img srcset="/images/uploads/hero-testimonials.jpg 1800w,
                                 /images/uploads/hero-testimonials-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-testimonials.jpg" loading="lazy"/>
                 </picture>
@@ -361,8 +355,8 @@
                         </div>
                         <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-7-author-wrapper">
                             <picture>
-                                <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
-                                <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100">
+                                <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp"/>
+                                <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100"/>
                             </picture>
                             <div class="p-2">
                                 <h3 class="mb-0">Client Name</h3>
@@ -379,8 +373,8 @@
                         </div>
                         <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-7-author-wrapper">
                             <picture>
-                                <source srcset="/images/uploads/testimonial-man.webp" type="image/webp">
-                                <img src="/images/uploads/testimonial-man.jpg" alt="image of testimonial author" width="100" height="100">
+                                <source srcset="/images/uploads/testimonial-man.webp" type="image/webp"/>
+                                <img src="/images/uploads/testimonial-man.jpg" alt="image of testimonial author" width="100" height="100"/>
                             </picture>
                             <div class="p-2">
                                 <h3 class="mb-0">Client Name</h3>
@@ -392,8 +386,7 @@
             </div>
             <div class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-7-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-7-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
                     </div>
                 </div>
             </div>
