Added new CTA with background image and image overlay

--- a/_factory_call_to_actions.html
+++ b/_factory_call_to_actions.html
@@ -55,10 +55,10 @@
                             <div class="pd-CTA-2-subHeadline">
                                 <p>Sed ornare elementum iaculis. Pellentesque mollis molestie turpis vel rhoncus.&nbsp;</p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="align-items-md-start align-items-stretch col-12 col-lg-6 d-flex flex-column justify-content-center">
-                        <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Get Started</a>                          
+                        <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Get Started</a> 
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                     <div class="col-12 col-lg pb-3 pb-lg-0">
                         <div class="pd-CTA-3-icon-outer">
                             <img src="images/design-assets/icon-email-newsletter.svg" alt="icon of email newsletter" width="70" height="70">
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-12 col-lg-7 pb-3 pb-lg-0 pe-lg-3 ps-lg-3">
                         <div class="pd-CTA-3-text-outer">
@@ -87,7 +87,7 @@
                             <div class="pd-CTA-3-subHeadline">
                                 <p>Aenean molestie mauris ipsum, et tempor odio scelerisque sit amet.</p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="align-items-md-center align-items-stretch col-12 col-lg d-flex flex-column justify-content-center">
                         <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Get Started</a> 
@@ -109,7 +109,7 @@
                             <div class="pd-CTA-4-subHeadline">
                                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.&nbsp;</p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="align-items-md-center align-items-stretch col-12 col-lg d-flex flex-column justify-content-center">
                         <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Get Started</a> 
@@ -120,6 +120,42 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-CTA-5</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-CTA-5 pt-5" style="position: relative;">
+            <div class="pd-CTA-5-image-outer">
+                <picture>
+                    <source srcset="/images/uploads/hero-testimonials.webp 1800w, 
+                                    /images/uploads/hero-testimonials-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
+                    <img srcset="/images/uploads/hero-testimonials.jpg 1800w,
+                                /images/uploads/hero-testimonials-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-testimonials.jpg" loading="lazy"/>
+                </picture>
+            </div>
+            <div class="pd-CTA-5-image-overlay pg-empty-placeholder"></div>
+            <div class="container" style="position: relative;">
+                <div class="row">
+                    <div class="col-12 col-lg-6 pb-3 pb-lg-0">
+                        <div class="pd-CTA-5-text-col">
+                            <header>
+                                <h2><strong>Want to work with us?</strong></h2>
+                                <div class="pd-CTA-5-headline">
+                                    <p><strong>Get started today...</strong></p>
+                                </div>
+                            </header>
+                            <div class="pd-CTA-5-subHeadline">
+                                <p>Sed ornare elementum iaculis. Pellentesque mollis molestie turpis vel rhoncus.&nbsp;</p>
+                            </div>
+                        </div>                         
+                    </div>
+                    <div class="align-items-md-start align-items-stretch col-12 col-lg-6 d-flex flex-column justify-content-center">
+                        <a href="#" name="anchor" class="btn btn-info"><span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Get Started</a> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-CTA-6</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
