Created blog cards

--- a/_factory_cards_posts.html
+++ b/_factory_cards_posts.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Blank Template for Bootstrap</title>
+        <title>Cards - Posts</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -16,6 +16,43 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-posts-1</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-cards-posts-1 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 d-flex flex-column">
+                        <div class="pd-cards-posts-1-card-outer">
+                            <div class="pd-cards-posts-1-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
+                                    <img src="/images/uploads/cards-sample-1.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image">
+                                </picture>
+                                <div class="pd-cards-posts-1-categories-outer">
+                                    <a href="#" name="anchor" class="pd-cards-posts-1-category">Software</a>
+                                </div>
+                            </div>
+                            <div class="pd-cards-posts-1-text">
+                                <header>
+                                    <p class="pd-cards-posts-1-date">Nov 26, 2021</p>
+                                    <a class="pd-posts-cards-1-headline" href="#" name="anchor"><h3>The Roots of Recruitment - from Boots to Spacesuits</h3></a>
+                                </header>
+                                <div class="pd-cards-posts-1-body-text">
+                                    <p>Sed lacinia sem non lacinia pellentesque. Pellentesque ligula enim, accumsan ac urna at, semper interdum orci.</p>
+                                </div>
+                                <div class="pd-cards-posts-1-tags-outer">
+                                    <img src="images/design-assets/icon-tag.svg" alt="icon of a tag" width="20" height="20">
+                                    <ul class="list-inline">
+                                        <li class="list-inline-item">
+                                            <a href="#" name="anchor" class="pd-cards-posts-1-tag">Staffing</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <a href="#" name="anchor" class="pd-cards-posts-1-link">Read</a>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
             </div>
         </section>
         <section class="pb-5 pt-5" style="position: relative;">
