Added new post cards

--- a/_factory_cards_posts.html
+++ b/_factory_cards_posts.html
@@ -21,13 +21,13 @@
         <section class="pb-5 pd-cards-posts-1 pt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 d-flex flex-column">
+                    <div class="col-lg-4 col-md-6 d-flex flex-column mb-4">
                         <div class="pd-cards-posts-1-card-outer">
                             <div class="pd-cards-posts-1-image-outer">
-                                <picture>
-                                    <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
-                                    <img src="/images/uploads/cards-sample-1.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image">
-                                </picture>
+                                <a href="#" name="anchor"><picture>
+                                        <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
+                                        <img src="/images/uploads/cards-sample-1.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image">
+                                    </picture></a>
                                 <div class="pd-cards-posts-1-categories-outer">
                                     <a href="#" name="anchor" class="pd-cards-posts-1-category">Software</a>
                                 </div>
@@ -52,12 +52,128 @@
                             </div>
                         </div>                         
                     </div>
+                    <div class="col-lg-4 col-md-6 d-flex flex-column mb-4">
+                        <div class="pd-cards-posts-1-card-outer">
+                            <div class="pd-cards-posts-1-image-outer">
+                                <a href="#" name="anchor"><picture>
+                                        <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp">
+                                        <img src="/images/uploads/cards-sample-2.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image">
+                                    </picture></a>
+                                <div class="pd-cards-posts-1-categories-outer">
+                                    <a href="#" name="anchor" class="pd-cards-posts-1-category">Recruitment</a>
+                                </div>
+                            </div>
+                            <div class="pd-cards-posts-1-text">
+                                <header>
+                                    <p class="pd-cards-posts-1-date">Nov 26, 2021</p>
+                                    <a class="pd-posts-cards-1-headline" href="#" name="anchor"><h3>How to supercharge your temp desk</h3></a>
+                                </header>
+                                <div class="pd-cards-posts-1-body-text">
+                                    <p>Sed lacinia sem non lacinia pellentesque. Pellentesque ligula enim, accumsan ac urna at, semper interdum orci.</p>
+                                </div>
+                                <div class="pd-cards-posts-1-tags-outer">
+                                    <img src="images/design-assets/icon-tag.svg" alt="icon of a tag" width="20" height="20">
+                                    <ul class="list-inline">
+                                        <li class="list-inline-item">
+                                            <a href="#" name="anchor" class="pd-cards-posts-1-tag">Staffing</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <a href="#" name="anchor" class="pd-cards-posts-1-link">Read</a>
+                            </div>
+                        </div>                         
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex flex-column mb-4">
+                        <div class="pd-cards-posts-1-card-outer">
+                            <div class="pd-cards-posts-1-image-outer">
+                                <a href="#" name="anchor"><picture>
+                                        <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp">
+                                        <img src="/images/uploads/cards-sample-3.jpg" alt="image of app software" loading="lazy" class="pd-cards-posts-1-image">
+                                    </picture></a>
+                                <div class="pd-cards-posts-1-categories-outer">
+                                    <a href="#" name="anchor" class="pd-cards-posts-1-category">Optimizing staffing</a>
+                                </div>
+                            </div>
+                            <div class="pd-cards-posts-1-text">
+                                <header>
+                                    <p class="pd-cards-posts-1-date">Nov 26, 2021</p>
+                                    <a class="pd-posts-cards-1-headline" href="#" name="anchor"><h3>The real solution to realtime communication</h3></a>
+                                </header>
+                                <div class="pd-cards-posts-1-body-text">
+                                    <p>Sed lacinia sem non lacinia pellentesque. Pellentesque ligula enim, accumsan ac urna at, semper interdum orci.</p>
+                                </div>
+                                <div class="pd-cards-posts-1-tags-outer">
+                                    <img src="images/design-assets/icon-tag.svg" alt="icon of a tag" width="20" height="20">
+                                    <ul class="list-inline">
+                                        <li class="list-inline-item">
+                                            <a href="#" name="anchor" class="pd-cards-posts-1-tag">Staffing</a>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <a href="#" name="anchor" class="pd-cards-posts-1-tag">Recruitment software</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <a href="#" name="anchor" class="pd-cards-posts-1-link">Read</a>
+                            </div>
+                        </div>                         
+                    </div>
                 </div>
             </div>
         </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-posts-2</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-cards-posts-2 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-xl-3 mb-3">
+                        <a href="#" class="pd-cards-posts-2-outer"><picture>
+                                <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
+                                <img src="/images/uploads/cards-sample-1.jpg" class="pd-cards-posts-2-image" alt="image of mobile" loading="lazy">
+                            </picture><div class="pd-cards-posts-2-overlay"></div><header class="pd-cards-posts-2-body">
+                                <h3>The Roots of Recruitment from boots to spacemen</h3>
+                            </header><div class="pd-cards-posts-2-categories-outer">
+                                <p>Software</p>
+                            </div></a>                          
+                    </div>
+                    <div class="col-lg-4 col-xl-3 mb-3">
+                        <a href="#" class="pd-cards-posts-2-outer"><picture>
+                                <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp">
+                                <img src="/images/uploads/cards-sample-2.jpg" class="pd-cards-posts-2-image" alt="image of mobile" loading="lazy">
+                            </picture><div class="pd-cards-posts-2-overlay"></div><header class="pd-cards-posts-2-body">
+                                <h3>How to supercharge your temp desk</h3>
+                            </header><div class="pd-cards-posts-2-categories-outer">
+                                <p>Recruitment</p>
+                            </div></a>                          
+                    </div>
+                    <div class="col-lg-4 col-xl-3 mb-3">
+                        <a href="#" class="pd-cards-posts-2-outer"><picture>
+                                <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp">
+                                <img src="/images/uploads/cards-sample-3.jpg" class="pd-cards-posts-2-image" alt="image of mobile" loading="lazy">
+                            </picture><div class="pd-cards-posts-2-overlay"></div><header class="pd-cards-posts-2-body">
+                                <h3>The real solution to realtime communication</h3>
+                            </header><div class="pd-cards-posts-2-categories-outer">
+                                <p>Optimizing Staff</p>
+                            </div></a>                          
+                    </div>
+                    <div class="col-lg-4 col-xl-3 mb-3">
+                        <a href="#" class="pd-cards-posts-2-outer"><picture>
+                                <source srcset="/images/uploads/cards-sample-7.webp" type="image/webp">
+                                <img src="/images/uploads/cards-sample-7.jpg" class="pd-cards-posts-2-image" alt="image of mobile" loading="lazy">
+                            </picture><div class="pd-cards-posts-2-overlay"></div><header class="pd-cards-posts-2-body">
+                                <h3>Building our development team</h3>
+                            </header><div class="pd-cards-posts-2-categories-outer">
+                                <p>Team</p>
+                            </div></a>                          
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-posts-3</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
