Added new section

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -494,6 +494,36 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-13</p>
             </div>
         </section>
+        <section class="pb-5 pd-section-13 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 ps-lg-5 text-center text-lg-end">
+                        <header>
+                            <h2>Who we help...</h2>
+                            <div class="pd-section-13-headline">
+                                <p><strong>Who is Scissors the perfect fit for?</strong></p>
+                            </div>
+                        </header>                         
+
+                        <div class="pd-section-13-para">
+                            <p>Vivamus eget massa eu orci dictum volutpat. Morbi tincidunt elit vel massa consectetur lacinia. Proin suscipit purus a mauris malesuada rutrum. Cras mauris turpis, porta sed sodales sit amet, aliquam a nisi. Aliquam diam turpis, hendrerit vel faucibus congue, lacinia egestas elit. Vivamus id lacinia odio. Suspendisse congue, tortor ac ultricies dapibus, odio metus vulputate dolor, vel porttitor metus dolor non neque.</p>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+            <footer class="container pb-3 pt-5 text-end">
+                <div class="row">
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-section-13-link">Meet the team<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    </div>
+                </div>
+            </footer>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-14</p>
+            </div>
+        </section>
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
