Added fixes for videos

--- a/_factory_heroVideos.html
+++ b/_factory_heroVideos.html
@@ -36,10 +36,12 @@
                 <div class="row">
                     <div class="col">
                         <div class="pd-hero-video-1-videoWrapper">
-                            <video preload="metadata" autoplay muted controls width="1036" height="582" playsinline>
-                                <source src="/assets/movies/file.mp4" type="video/mp4"/>
-                                Sorry, your browser doesn't support embedded videos.
-                            </video>
+                            <div class="ratio ratio-16x9">
+                                <video preload="metadata" autoplay muted controls width="1036" height="582" playsinline>
+                                    <source src="/assets/movies/file.mp4" type="video/mp4"/>
+                                    Sorry, your browser doesn't support embedded videos.
+                                </video>
+                            </div>
                         </div>                         
                     </div>
                 </div>
@@ -68,11 +70,13 @@
                 <div class="row">
                     <div class="col">
                         <div class="pd-hero-video-2-videoWrapper">
-                            <video controls width="750px">
-                                <source src="/assets/movies/file.mp4" type="video/webm"/>
-                                <source src="/assets/movies/file.mp4" type="video/mp4"/>
-                                Sorry, your browser doesn't support embedded videos.
-                            </video>
+                            <div class="ratio ratio-16x9">
+                                <video controls width="750px">
+                                    <source src="/assets/movies/file.mp4" type="video/webm"/>
+                                    <source src="/assets/movies/file.mp4" type="video/mp4"/>
+                                    Sorry, your browser doesn't support embedded videos.
+                                </video>
+                            </div>
                         </div>                         
                     </div>
                 </div>
@@ -105,7 +109,7 @@
                         </div>                         
                     </div>
                     <div class="align-items-center col-lg-7 d-flex flex-row justify-content-center pt-3 pt-md-0">
-                        <div class="pd-hero-video-3-video-outer">
+                        <div class="ratio ratio-16x9">
                             <video controls width="750px">
                                 <source src="/assets/movies/file.mp4" type="video/webm"/>
                                 <source src="/assets/movies/file.mp4" type="video/mp4"/>
@@ -143,7 +147,7 @@
                         </div>                         
                     </div>
                     <div class="align-items-center col-lg-7 d-flex flex-row justify-content-center pt-3 pt-md-0">
-                        <div class="pd-hero-video-4-video-outer">
+                        <div class="ratio ratio-16x9">
                             <video controls width="750px">
                                 <source src="/assets/movies/file.mp4" type="video/webm"/>
                                 <source src="/assets/movies/file.mp4" type="video/mp4"/>
@@ -189,11 +193,12 @@
         <div class="pd-hero-video-5-modal" id="modal5">
             <span><a name="anchor" href="#" class="pd-hero-video-5-close" data-modal-id="modal5">Close<img src="images/design-assets/icon-close.svg" alt="icon for closing window" width="40" height="40"></a></span>
             <div class="pd-hero-video-5-modal-video-outer">
-                <video preload="none" controls width="750px">
-                    <source src="/assets/movies/file.mp4" type="video/webm"/>
-                    <source src="/assets/movies/file.mp4" type="video/mp4"/>
-                    Sorry, your browser doesn't support embedded videos.
-                </video>
+                <div class="ratio ratio-16x9">
+                    <video preload="none" controls width="750px">
+                        <source src="/assets/movies/file.mp4" type="video/webm"/>
+                        Sorry, your browser doesn't support embedded videos.
+                    </video>
+                </div>
             </div>
         </div>
         <section class="pb-5 pt-5" style="position: relative;">
